toolchain/lib/src/parser/gen/VilsParser.dart
// Generated from grammar/VilsParser.g4 by ANTLR 4.13.2
// ignore_for_file: unused_import, unused_local_variable, prefer_single_quotes
import 'package:antlr4/antlr4.dart';

import 'VilsParserVisitor.dart';
import 'VilsParserBaseVisitor.dart';
const int RULE_compilationUnit = 0, RULE_topLevelStatement = 1, RULE_graphStatement = 2, 
          RULE_subroutine = 3, RULE_block = 4, RULE_edgeDeclaration = 5, 
          RULE_transformation = 6, RULE_transformInvocation = 7, RULE_transformExecute = 8, 
          RULE_edgeMacroInvocation = 9, RULE_nodeRef = 10, RULE_executableRef = 11, 
          RULE_nodeRefList = 12, RULE_annotation = 13, RULE_value = 14, 
          RULE_valueObj = 15, RULE_valueList = 16, RULE_valuePair = 17;
class VilsParser extends Parser {
  static final checkVersion = () => RuntimeMetaData.checkVersion('4.13.2', RuntimeMetaData.VERSION);
  static const int TOKEN_EOF = IntStream.EOF;

  static final List<DFA> _decisionToDFA = List.generate(
      _ATN.numberOfDecisions, (i) => DFA(_ATN.getDecisionState(i), i));
  static final PredictionContextCache _sharedContextCache = PredictionContextCache();
  static const int TOKEN_BLOCK_BEGIN = 1, TOKEN_SUBROUTINE_BEGIN = 2, TOKEN_PSEUDO_INPUT = 3, 
                   TOKEN_PSEUDO_ARG = 4, TOKEN_PSEUDO_OUTPUT = 5, TOKEN_PSEUDO_VOID = 6, 
                   TOKEN_BANG = 7, TOKEN_QUESTION = 8, TOKEN_EQ = 9, TOKEN_DARR = 10, 
                   TOKEN_SARR = 11, TOKEN_TARR = 12, TOKEN_CHAIN = 13, TOKEN_PER = 14, 
                   TOKEN_DOT = 15, TOKEN_COMMA = 16, TOKEN_COLON = 17, TOKEN_AT = 18, 
                   TOKEN_LP = 19, TOKEN_RP = 20, TOKEN_LB = 21, TOKEN_RB = 22, 
                   TOKEN_LC = 23, TOKEN_RC = 24, TOKEN_IDENTIFIER = 25, 
                   TOKEN_NODE_IDENTIFIER = 26, TOKEN_NULL = 27, TOKEN_BOOLEAN = 28, 
                   TOKEN_STRING = 29, TOKEN_NUMBER = 30, TOKEN_WS = 31, 
                   TOKEN_BLOCK_HEADER_ID = 32, TOKEN_BLOCK_HEADER_END = 33, 
                   TOKEN_BLOCK_HEADER_WS = 34, TOKEN_BLOCK_LINE = 35, TOKEN_BLOCK_END = 36;

  @override
  final List<String> ruleNames = [
    'compilationUnit', 'topLevelStatement', 'graphStatement', 'subroutine', 
    'block', 'edgeDeclaration', 'transformation', 'transformInvocation', 
    'transformExecute', 'edgeMacroInvocation', 'nodeRef', 'executableRef', 
    'nodeRefList', 'annotation', 'value', 'valueObj', 'valueList', 'valuePair'
  ];

  static final List<String?> _LITERAL_NAMES = [
      null, "'%begin'", "'%subroutine'", "'\$in'", "'\$arg'", "'\$out'", 
      "'\$void'", "'!'", "'?'", "'='", "'=>'", "'->'", "'=|'", "'|'", "'%'", 
      "'.'", "','", "':'", "'@'", "'('", "')'", "'['", "']'", "'{'", "'}'", 
      null, null, "'null'", null, null, null, null, null, null, null, null, 
      "'%end'"
  ];
  static final List<String?> _SYMBOLIC_NAMES = [
      null, "BLOCK_BEGIN", "SUBROUTINE_BEGIN", "PSEUDO_INPUT", "PSEUDO_ARG", 
      "PSEUDO_OUTPUT", "PSEUDO_VOID", "BANG", "QUESTION", "EQ", "DARR", 
      "SARR", "TARR", "CHAIN", "PER", "DOT", "COMMA", "COLON", "AT", "LP", 
      "RP", "LB", "RB", "LC", "RC", "IDENTIFIER", "NODE_IDENTIFIER", "NULL", 
      "BOOLEAN", "STRING", "NUMBER", "WS", "BLOCK_HEADER_ID", "BLOCK_HEADER_END", 
      "BLOCK_HEADER_WS", "BLOCK_LINE", "BLOCK_END"
  ];
  static final Vocabulary VOCABULARY = VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  @override
  Vocabulary get vocabulary {
    return VOCABULARY;
  }

  @override
  String get grammarFileName => 'VilsParser.g4';

  @override
  List<int> get serializedATN => _serializedATN;

  @override
  ATN getATN() {
   return _ATN;
  }

  VilsParser(TokenStream input) : super(input) {
    interpreter = ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  CompilationUnitContext compilationUnit() {
    dynamic _localctx = CompilationUnitContext(context, state);
    enterRule(_localctx, 0, RULE_compilationUnit);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 39;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 100925694) != 0)) {
        state = 36;
        topLevelStatement();
        state = 41;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 42;
      match(TOKEN_EOF);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  TopLevelStatementContext topLevelStatement() {
    dynamic _localctx = TopLevelStatementContext(context, state);
    enterRule(_localctx, 2, RULE_topLevelStatement);
    try {
      state = 47;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
      case TOKEN_BLOCK_BEGIN:
        enterOuterAlt(_localctx, 1);
        state = 44;
        block();
        break;
      case TOKEN_SUBROUTINE_BEGIN:
        enterOuterAlt(_localctx, 2);
        state = 45;
        subroutine();
        break;
      case TOKEN_PSEUDO_INPUT:
      case TOKEN_PSEUDO_ARG:
      case TOKEN_PSEUDO_OUTPUT:
      case TOKEN_PSEUDO_VOID:
      case TOKEN_BANG:
      case TOKEN_AT:
      case TOKEN_IDENTIFIER:
      case TOKEN_NODE_IDENTIFIER:
        enterOuterAlt(_localctx, 3);
        state = 46;
        graphStatement();
        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  GraphStatementContext graphStatement() {
    dynamic _localctx = GraphStatementContext(context, state);
    enterRule(_localctx, 4, RULE_graphStatement);
    try {
      state = 51;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 2, context)) {
      case 1:
        enterOuterAlt(_localctx, 1);
        state = 49;
        edgeDeclaration();
        break;
      case 2:
        enterOuterAlt(_localctx, 2);
        state = 50;
        edgeMacroInvocation();
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  SubroutineContext subroutine() {
    dynamic _localctx = SubroutineContext(context, state);
    enterRule(_localctx, 6, RULE_subroutine);
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      state = 53;
      match(TOKEN_SUBROUTINE_BEGIN);
      state = 54;
      match(TOKEN_IDENTIFIER);
      state = 58;
      errorHandler.sync(this);
      _alt = interpreter!.adaptivePredict(tokenStream, 3, context);
      while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
        if (_alt == 1) {
          state = 55;
          graphStatement(); 
        }
        state = 60;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 3, context);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  BlockContext block() {
    dynamic _localctx = BlockContext(context, state);
    enterRule(_localctx, 8, RULE_block);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 61;
      match(TOKEN_BLOCK_BEGIN);
      state = 63; 
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      do {
        state = 62;
        match(TOKEN_BLOCK_HEADER_ID);
        state = 65; 
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      } while (_la == TOKEN_BLOCK_HEADER_ID);
      state = 67;
      match(TOKEN_BLOCK_HEADER_END);
      state = 71;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_BLOCK_LINE) {
        state = 68;
        match(TOKEN_BLOCK_LINE);
        state = 73;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 74;
      match(TOKEN_BLOCK_END);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  EdgeDeclarationContext edgeDeclaration() {
    dynamic _localctx = EdgeDeclarationContext(context, state);
    enterRule(_localctx, 10, RULE_edgeDeclaration);
    int _la;
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      state = 79;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_AT) {
        state = 76;
        annotation();
        state = 81;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 82;
      nodeRefList();
      state = 83;
      match(TOKEN_DARR);
      state = 84;
      nodeRef(0);
      state = 88;
      errorHandler.sync(this);
      _alt = interpreter!.adaptivePredict(tokenStream, 7, context);
      while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
        if (_alt == 1) {
          state = 85;
          transformation(); 
        }
        state = 90;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 7, context);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  TransformationContext transformation() {
    dynamic _localctx = TransformationContext(context, state);
    enterRule(_localctx, 12, RULE_transformation);
    int _la;
    try {
      state = 105;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 10, context)) {
      case 1:
        enterOuterAlt(_localctx, 1);
        state = 94;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        while (_la == TOKEN_AT) {
          state = 91;
          annotation();
          state = 96;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        }
        state = 97;
        transformInvocation();
        break;
      case 2:
        enterOuterAlt(_localctx, 2);
        state = 101;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        while (_la == TOKEN_AT) {
          state = 98;
          annotation();
          state = 103;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        }
        state = 104;
        transformExecute();
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  TransformInvocationContext transformInvocation() {
    dynamic _localctx = TransformInvocationContext(context, state);
    enterRule(_localctx, 14, RULE_transformInvocation);
    try {
      enterOuterAlt(_localctx, 1);
      state = 107;
      match(TOKEN_CHAIN);
      state = 108;
      match(TOKEN_IDENTIFIER);
      state = 110;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 11, context)) {
      case 1:
        state = 109;
        value();
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  TransformExecuteContext transformExecute() {
    dynamic _localctx = TransformExecuteContext(context, state);
    enterRule(_localctx, 16, RULE_transformExecute);
    try {
      enterOuterAlt(_localctx, 1);
      state = 112;
      match(TOKEN_PER);
      state = 113;
      match(TOKEN_IDENTIFIER);
      state = 115;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 12, context)) {
      case 1:
        state = 114;
        value();
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  EdgeMacroInvocationContext edgeMacroInvocation() {
    dynamic _localctx = EdgeMacroInvocationContext(context, state);
    enterRule(_localctx, 18, RULE_edgeMacroInvocation);
    int _la;
    try {
      state = 137;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 16, context)) {
      case 1:
        enterOuterAlt(_localctx, 1);
        state = 120;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        while (_la == TOKEN_AT) {
          state = 117;
          annotation();
          state = 122;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        }
        state = 123;
        match(TOKEN_BANG);
        state = 124;
        match(TOKEN_IDENTIFIER);
        state = 126;
        errorHandler.sync(this);
        switch (interpreter!.adaptivePredict(tokenStream, 14, context)) {
        case 1:
          state = 125;
          value();
          break;
        }
        break;
      case 2:
        enterOuterAlt(_localctx, 2);
        state = 131;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        while (_la == TOKEN_AT) {
          state = 128;
          annotation();
          state = 133;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        }
        state = 134;
        match(TOKEN_BANG);
        state = 135;
        match(TOKEN_IDENTIFIER);
        state = 136;
        match(TOKEN_IDENTIFIER);
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  NodeRefContext nodeRef([int _p = 0]) {
    final _parentctx = context;
    final _parentState = state;
    dynamic _localctx = NodeRefContext(context, _parentState);
    var _prevctx = _localctx;
    var _startState = 20;
    enterRecursionRule(_localctx, 20, RULE_nodeRef, _p);
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      state = 148;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
      case TOKEN_NODE_IDENTIFIER:
        state = 140;
        match(TOKEN_NODE_IDENTIFIER);
        break;
      case TOKEN_PSEUDO_INPUT:
        state = 141;
        match(TOKEN_PSEUDO_INPUT);
        break;
      case TOKEN_PSEUDO_ARG:
        state = 142;
        match(TOKEN_PSEUDO_ARG);
        break;
      case TOKEN_PSEUDO_OUTPUT:
        state = 143;
        match(TOKEN_PSEUDO_OUTPUT);
        break;
      case TOKEN_PSEUDO_VOID:
        state = 144;
        match(TOKEN_PSEUDO_VOID);
        break;
      case TOKEN_IDENTIFIER:
        state = 145;
        match(TOKEN_IDENTIFIER);
        state = 146;
        match(TOKEN_COLON);
        state = 147;
        nodeRef(1);
        break;
      default:
        throw NoViableAltException(this);
      }
      context!.stop = tokenStream.LT(-1);
      state = 155;
      errorHandler.sync(this);
      _alt = interpreter!.adaptivePredict(tokenStream, 18, context);
      while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
        if (_alt == 1) {
          if (parseListeners != null) triggerExitRuleEvent();
          _prevctx = _localctx;
          _localctx = NodeRefContext(_parentctx, _parentState);
          pushNewRecursionContext(_localctx, _startState, RULE_nodeRef);
          state = 150;
          if (!(precpred(context, 2))) {
            throw FailedPredicateException(this, "precpred(context, 2)");
          }
          state = 151;
          match(TOKEN_AT);
          state = 152;
          match(TOKEN_NUMBER); 
        }
        state = 157;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 18, context);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      unrollRecursionContexts(_parentctx);
    }
    return _localctx;
  }

  ExecutableRefContext executableRef() {
    dynamic _localctx = ExecutableRefContext(context, state);
    enterRule(_localctx, 22, RULE_executableRef);
    try {
      enterOuterAlt(_localctx, 1);
      state = 158;
      match(TOKEN_DOT);
      state = 159;
      match(TOKEN_IDENTIFIER);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  NodeRefListContext nodeRefList() {
    dynamic _localctx = NodeRefListContext(context, state);
    enterRule(_localctx, 24, RULE_nodeRefList);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 161;
      nodeRef(0);
      state = 166;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_COMMA) {
        state = 162;
        match(TOKEN_COMMA);
        state = 163;
        nodeRef(0);
        state = 168;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  AnnotationContext annotation() {
    dynamic _localctx = AnnotationContext(context, state);
    enterRule(_localctx, 26, RULE_annotation);
    int _la;
    try {
      state = 186;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 21, context)) {
      case 1:
        enterOuterAlt(_localctx, 1);
        state = 169;
        match(TOKEN_AT);
        state = 170;
        match(TOKEN_IDENTIFIER);
        state = 171;
        match(TOKEN_LP);
        state = 173;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if ((((_la) & ~0x3f) == 0 && ((1 << _la) & 2124447864) != 0)) {
          state = 172;
          value();
        }

        state = 175;
        match(TOKEN_RP);
        break;
      case 2:
        enterOuterAlt(_localctx, 2);
        state = 176;
        match(TOKEN_AT);
        state = 177;
        match(TOKEN_IDENTIFIER);
        break;
      case 3:
        enterOuterAlt(_localctx, 3);
        state = 178;
        match(TOKEN_AT);
        state = 179;
        match(TOKEN_IDENTIFIER);
        state = 180;
        match(TOKEN_COLON);
        state = 181;
        value();
        break;
      case 4:
        enterOuterAlt(_localctx, 4);
        state = 182;
        match(TOKEN_AT);
        state = 183;
        match(TOKEN_IDENTIFIER);
        state = 184;
        match(TOKEN_COLON);
        state = 185;
        match(TOKEN_IDENTIFIER);
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ValueContext value() {
    dynamic _localctx = ValueContext(context, state);
    enterRule(_localctx, 28, RULE_value);
    try {
      state = 196;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
      case TOKEN_STRING:
        enterOuterAlt(_localctx, 1);
        state = 188;
        match(TOKEN_STRING);
        break;
      case TOKEN_NUMBER:
        enterOuterAlt(_localctx, 2);
        state = 189;
        match(TOKEN_NUMBER);
        break;
      case TOKEN_BOOLEAN:
        enterOuterAlt(_localctx, 3);
        state = 190;
        match(TOKEN_BOOLEAN);
        break;
      case TOKEN_NULL:
        enterOuterAlt(_localctx, 4);
        state = 191;
        match(TOKEN_NULL);
        break;
      case TOKEN_PSEUDO_INPUT:
      case TOKEN_PSEUDO_ARG:
      case TOKEN_PSEUDO_OUTPUT:
      case TOKEN_PSEUDO_VOID:
      case TOKEN_IDENTIFIER:
      case TOKEN_NODE_IDENTIFIER:
        enterOuterAlt(_localctx, 5);
        state = 192;
        nodeRef(0);
        break;
      case TOKEN_DOT:
        enterOuterAlt(_localctx, 6);
        state = 193;
        executableRef();
        break;
      case TOKEN_LB:
        enterOuterAlt(_localctx, 7);
        state = 194;
        valueList();
        break;
      case TOKEN_LC:
        enterOuterAlt(_localctx, 8);
        state = 195;
        valueObj();
        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ValueObjContext valueObj() {
    dynamic _localctx = ValueObjContext(context, state);
    enterRule(_localctx, 30, RULE_valueObj);
    int _la;
    try {
      state = 219;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 26, context)) {
      case 1:
        enterOuterAlt(_localctx, 1);
        state = 198;
        match(TOKEN_LC);
        state = 199;
        match(TOKEN_RC);
        break;
      case 2:
        enterOuterAlt(_localctx, 2);
        state = 200;
        match(TOKEN_LC);
        state = 201;
        valuePair();
        state = 203;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_COMMA) {
          state = 202;
          match(TOKEN_COMMA);
        }

        state = 205;
        match(TOKEN_RC);
        break;
      case 3:
        enterOuterAlt(_localctx, 3);
        state = 207;
        match(TOKEN_LC);
        state = 208;
        valuePair();
        state = 213; 
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        do {
          state = 210;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
          if (_la == TOKEN_COMMA) {
            state = 209;
            match(TOKEN_COMMA);
          }

          state = 212;
          valuePair();
          state = 215; 
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        } while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 570490880) != 0));
        state = 217;
        match(TOKEN_RC);
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ValueListContext valueList() {
    dynamic _localctx = ValueListContext(context, state);
    enterRule(_localctx, 32, RULE_valueList);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 221;
      match(TOKEN_LB);
      state = 230;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if ((((_la) & ~0x3f) == 0 && ((1 << _la) & 2124447864) != 0)) {
        state = 222;
        value();
        state = 227;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        while (_la == TOKEN_COMMA) {
          state = 223;
          match(TOKEN_COMMA);
          state = 224;
          value();
          state = 229;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        }
      }

      state = 232;
      match(TOKEN_RB);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ValuePairContext valuePair() {
    dynamic _localctx = ValuePairContext(context, state);
    enterRule(_localctx, 34, RULE_valuePair);
    try {
      state = 240;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
      case TOKEN_IDENTIFIER:
        enterOuterAlt(_localctx, 1);
        state = 234;
        match(TOKEN_IDENTIFIER);
        state = 235;
        match(TOKEN_COLON);
        state = 236;
        value();
        break;
      case TOKEN_STRING:
        enterOuterAlt(_localctx, 2);
        state = 237;
        match(TOKEN_STRING);
        state = 238;
        match(TOKEN_COLON);
        state = 239;
        value();
        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @override
  bool sempred(RuleContext? _localctx, int ruleIndex, int predIndex) {
    switch (ruleIndex) {
    case 10:
      return _nodeRef_sempred(_localctx as NodeRefContext?, predIndex);
    }
    return true;
  }
  bool _nodeRef_sempred(dynamic _localctx, int predIndex) {
    switch (predIndex) {
      case 0: return precpred(context, 2);
    }
    return true;
  }
